--- a/index.html
+++ b/index.html
@@ -1,3 +1,27 @@
-<a href="https://ol-big-boots.github.io/pdf-flipbook/" target="_blank">
-  Read the zine as a flipbook
-</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>ol-big-boots</title>
+  <style>
+    body { font-family: system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial; margin: 0; padding: 0; background: #f7f7fb; color: #111; }
+    .container { max-width: 900px; margin: 4rem auto; padding: 2rem; text-align: center; }
+    h1 { margin-bottom: 0.5rem; }
+    p.lead { color: #444; margin-top: 0; margin-bottom: 2rem; }
+    .btn { display: inline-block; background: #1f6feb; color: white; padding: 14px 22px; border-radius: 8px; text-decoration: none; font-weight: 600; box-shadow: 0 6px 18px rgba(31,111,235,0.16); }
+    .btn:focus, .btn:hover { background: #1558c7; }
+    .note { margin-top: 1rem; color:#666; font-size:0.9rem }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>Welcome</h1>
+    <p class="lead">This repository hosts my GitHub Pages site.</p>
+
+    <a class="btn" href="https://ol-big-boots.github.io/pdf-flipbook/" target="_blank" rel="noopener">Open the PDF Flipbook demo</a>
+
+    <p class="note">Opens in a new tab — the flipbook demo showcases a PDF-based zine viewer.</p>
+  </div>
+</body>
+</html>
