--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <p class="lead">This repository hosts my GitHub Pages site.</p>
 
     <div class="actions">
-      <a class="btn" href="https://ol-big-boots.github.io/pdf-flipbook/" target="_blank" rel="noopener">Open the PDF Flipbook demo</a>
+      <a class="btn" href="https://ol-big-boots.github.io/pdf-flipbook/" target="_blank" rel="noopener">t5t-zine</a>
       <!-- One link to the music collection page -->
       <a class="btn secondary" href="/music.html">Music</a>
     </div>
